gitlab-ci: Set XDG_DATA_DIRS
The unit tests want to prepend something and if the variable is
completely empty the value will just becomes the only lookup path for
schema thus failing to find any defaults schema.

Unit test didn't need schemas so far and the integration tests don't
change XDG_DATA_DIRS so we didn't notice.

Signed-off-by: Guido Günther <guido.gunther@puri.sm>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,7 @@ variables:
                     meson musl-dev networkmanager networkmanager-dev ninja polkit-elogind-dev pulseaudio-dev
                     upower-dev wayland-dev wayland-protocols ttf-dejavu evolution-data-server-dev evince-dev
                     libadwaita-dev json-glib-dev
+  XDG_DATA_DIRS: /usr/share
 
 .bookworm_vars: &bookworm_vars
   variables:
